manifests/payments-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payments
  labels:
    app: antaeus 
spec: {}
status: {}
