manifests/antaeus-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antaeus-test-service
  namespace: payments
  labels:
    app: antaeus
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: antaeus
