manifests/payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: payments
  labels:
    app: payments
spec:
  type: ClusterIP
  ports:
  - port: 9000
    protocol: TCP
  selector:
    app: payments
