manifests/antaeus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: antaeus-ingress
  namespace: payments
  labels:
    app: antaeus
spec:
  ingressClassName: nginx
  rules:
    - host: "antaeus.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: antaeus-service
                port:
                  number: 8000
